# GKit

./: ..gitignore.un~  .cproject  .gitignore  .gitignore~  .project  CMakeLists.txt  GKit.sln  GKit.vcxproj  GKit.vcxproj.filters  Makefile  Todo.txt  makefile.linux  makefile.osx  makefile.win
3D/: CMakeLists.txt  makefile.linux  makefile.osx  makefile.win
3D/shdr/: skybox_pixel_shader.hpp  skybox_vertex_shader.hpp  static_mesh_pixel_shader.hpp
3D/src/common/: mesh_util.cpp
3D/src/core/: dynamic_mesh.cpp  node.cpp  skybox.cpp  sprite.cpp  static_mesh.cpp  sun.cpp
3D/src/graphics/: cubemap.cpp  mesh.cpp  particle_array.cpp  quad.cpp  vertex_buffer.cpp
3D/src/importer/: collada_importer.cpp  tga_reader.cpp
3D/src/io/: file.cpp  filesystem.cpp
3D/src/math/: frustum.cpp  linear.cpp  transform_3d.cpp
3D/src/renderer/: blur_shader.cpp  dynamic_mesh_renderer.cpp  particle_renderer_3d.cpp  skybox_renderer.cpp
3D/src/system/: context.cpp
3D/src/utility/: string_buffer.cpp
GKit/: GKit.vcxproj  GKit.vcxproj.filters  Makefile  Todo.txt
GKit.xcodeproj/: project.pbxproj
shdr/: debug_pixel_shader.hpp  debug_vertex_shader.hpp  dynamic_mesh_pixel_shader.hpp  dynamic_mesh_renderer.vert  dynamic_mesh_vertex_shader.hpp  frame_pixel_shader.hpp  frame_vertex_shader.hpp  gaussian_blur.frag  gaussian_blur.vert  gaussian_blur_pixel_shader.hpp  gaussian_blur_vertex_shader.hpp  particle.frag  particle.vert  particle_pixel_shader.hpp  particle_vertex_shader.hpp  skybox_pixel_shader.hpp  skybox_renderer.frag  skybox_vertex_shader.hpp  sprite_renderer.frag  sprite_vertex_shader.hpp  static_mesh_pixel_shader.hpp  static_mesh_renderer.frag  static_mesh_vertex_shader.hpp
src/: bitmap.cpp  blur_shader.cpp  bmp_reader.cpp  bone.cpp  camera_2d.cpp  camera_3d.cpp  clock.cpp  collada_format.cpp  collada_importer.cpp  collada_parser.cpp  context.cpp  cubemap.cpp  debug_draw_interface.cpp  debug_drawer.cpp  dynamic_mesh.cpp  dynamic_mesh_renderer.cpp  fbx_importer.cpp  file.cpp  filesystem.cpp  frame_renderer.cpp  framebuffer.cpp  frustum.cpp  graphics.cpp  matrix.cpp  mdl_importer.cpp  mesh_orientation.cpp  mesh_util.cpp  node.cpp  particle_array.cpp  particle_renderer_3d.cpp  quad.cpp  random.cpp  shader.cpp  shader_source.cpp  skybox.cpp  skybox_renderer.cpp  sprite.cpp  sprite_renderer.cpp  static_mesh.cpp  (+10 more)
(+427 files in other folders)
